# squec

./: .gitignore  README.md  pyproject.toml
notebooks/: Draw.ipynb  Drawing-Example.ipynb  SQuEC-Illustrated.ipynb
squec/: __init__.py  pmss-test.ipynb  pmss.py  surface.py
tests/: test_integration.py  test_surface.py  test_vectorij.py
