[tool.poetry]
name = "squec"
version = "0.1.0"
description = ""
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
black = "^24.4.2"
ipykernel = "^6.29.4"
pytest = "^8.1.1"


[tool.poetry.group.server.dependencies]
flask = "^3.0.3"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
